<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_create"
        android:icon="@drawable/ic_add"
        android:enabled="true"
        android:orderInCategory="98"
        android:title="@string/create"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:enabled="true"
        android:title="@string/logout_label"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_users"
        android:orderInCategory="99"
        android:enabled="true"
        android:title="@string/users"
        android:visible="true"
        app:showAsAction="always" />


</menu>